// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageCodesTabWrapper renders renders empty results correctly 1`] = `
Array [
  <div
    className="row mt-4 mb-3 no-gutters"
  >
    <div
      className="col-12 col-xl-3 mb-3 mb-xl-0"
    >
      <h2>
        Overview
      </h2>
    </div>
    <div
      className="col-12 col-xl-4 mb-3 mb-xl-0"
    >
      <div
        className="pgn__searchfield d-flex"
      >
        <form
          className="d-flex align-items-center w-100"
          onReset={[Function]}
          onSubmit={[Function]}
          role="search"
        >
          <label
            className="m-0"
            htmlFor="pgn-searchfield-input-1"
          >
            <span
              className="sr-only"
            >
              search
            </span>
          </label>
          <input
            className="form-control"
            data-hj-suppress={true}
            disabled={false}
            id="pgn-searchfield-input-1"
            name="searchfield-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search by email or code..."
            role="searchbox"
            type="text"
            value=""
          />
          <button
            className="btn"
            disabled={false}
            type="submit"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              submit search
            </span>
          </button>
        </form>
      </div>
    </div>
    <div
      className="col-12 col-xl-5 mb-3 mb-xl-0 text-xl-right"
    >
      <button
        className="mr-2 btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="pgn__icon mr-2"
          data-testid="refresh-data"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 8l-4 4h3c0 3.31-2.69 6-6 6a5.87 5.87 0 01-2.8-.7l-1.46 1.46A7.93 7.93 0 0012 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46A7.93 7.93 0 0012 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"
              fill="currentColor"
            />
          </svg>
        </span>
        Refresh data
      </button>
      <a
        className="request-codes-btn btn btn-primary"
        href="/test-enterprise-slug/admin/coupons/request-codes"
        onClick={[Function]}
      >
        <span
          className="pgn__icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z"
              fill="currentColor"
            />
          </svg>
        </span>
        Request more codes
      </a>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      />
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="fade alert-content alert alert-warning show"
        role="alert"
      >
        <span
          className="pgn__icon alert-icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2L1 21h22L12 2z"
              fill="currentColor"
            />
            <path
              d="M13 16h-2v2h2v-2zM13 10h-2v4h2v-4z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          className="pgn__alert-message-wrapper"
        >
          <div
            className="alert-message-content"
          >
            There are no results.
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`ManageCodesTabWrapper renders renders error state correctly 1`] = `
Array [
  <div
    className="row mt-4 mb-3 no-gutters"
  >
    <div
      className="col-12 col-xl-3 mb-3 mb-xl-0"
    >
      <h2>
        Overview
      </h2>
    </div>
    <div
      className="col-12 col-xl-4 mb-3 mb-xl-0"
    >
      <div
        className="pgn__searchfield d-flex"
      >
        <form
          className="d-flex align-items-center w-100"
          onReset={[Function]}
          onSubmit={[Function]}
          role="search"
        >
          <label
            className="m-0"
            htmlFor="pgn-searchfield-input-4"
          >
            <span
              className="sr-only"
            >
              search
            </span>
          </label>
          <input
            className="form-control"
            data-hj-suppress={true}
            disabled={false}
            id="pgn-searchfield-input-4"
            name="searchfield-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search by email or code..."
            role="searchbox"
            type="text"
            value=""
          />
          <button
            className="btn"
            disabled={false}
            type="submit"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              submit search
            </span>
          </button>
        </form>
      </div>
    </div>
    <div
      className="col-12 col-xl-5 mb-3 mb-xl-0 text-xl-right"
    >
      <button
        className="mr-2 btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="pgn__icon mr-2"
          data-testid="refresh-data"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 8l-4 4h3c0 3.31-2.69 6-6 6a5.87 5.87 0 01-2.8-.7l-1.46 1.46A7.93 7.93 0 0012 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46A7.93 7.93 0 0012 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"
              fill="currentColor"
            />
          </svg>
        </span>
        Refresh data
      </button>
      <a
        className="request-codes-btn btn btn-primary"
        href="/test-enterprise-slug/admin/coupons/request-codes"
        onClick={[Function]}
      >
        <span
          className="pgn__icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z"
              fill="currentColor"
            />
          </svg>
        </span>
        Request more codes
      </a>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      />
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="fade alert-content alert alert-danger show"
        role="alert"
      >
        <span
          className="pgn__icon alert-icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          className="pgn__alert-message-wrapper"
        >
          <div
            className="alert-message-content"
          >
            <div
              className="alert-heading h4"
            >
              Unable to load coupons
            </div>
            <p>
              Try refreshing your screen (
              test error
              )
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`ManageCodesTabWrapper renders renders loading state correctly 1`] = `
Array [
  <div
    className="row mt-4 mb-3 no-gutters"
  >
    <div
      className="col-12 col-xl-3 mb-3 mb-xl-0"
    >
      <h2>
        Overview
      </h2>
    </div>
    <div
      className="col-12 col-xl-4 mb-3 mb-xl-0"
    >
      <div
        className="pgn__searchfield d-flex"
      >
        <form
          className="d-flex align-items-center w-100"
          onReset={[Function]}
          onSubmit={[Function]}
          role="search"
        >
          <label
            className="m-0"
            htmlFor="pgn-searchfield-input-3"
          >
            <span
              className="sr-only"
            >
              search
            </span>
          </label>
          <input
            className="form-control"
            data-hj-suppress={true}
            disabled={false}
            id="pgn-searchfield-input-3"
            name="searchfield-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search by email or code..."
            role="searchbox"
            type="text"
            value=""
          />
          <button
            className="btn"
            disabled={false}
            type="submit"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              submit search
            </span>
          </button>
        </form>
      </div>
    </div>
    <div
      className="col-12 col-xl-5 mb-3 mb-xl-0 text-xl-right"
    >
      <button
        className="mr-2 btn btn-link"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <span
          className="pgn__icon mr-2"
          data-testid="refresh-data"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 8l-4 4h3c0 3.31-2.69 6-6 6a5.87 5.87 0 01-2.8-.7l-1.46 1.46A7.93 7.93 0 0012 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46A7.93 7.93 0 0012 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"
              fill="currentColor"
            />
          </svg>
        </span>
        Refresh data
      </button>
      <a
        className="request-codes-btn btn btn-primary"
        href="/test-enterprise-slug/admin/coupons/request-codes"
        onClick={[Function]}
      >
        <span
          className="pgn__icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z"
              fill="currentColor"
            />
          </svg>
        </span>
        Request more codes
      </a>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      />
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="loading d-flex align-items-center justify-content-center coupons mt-3"
      >
        Loading...
        <span
          className="sr-only"
        >
          Loading
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`ManageCodesTabWrapper renders renders non-empty results correctly 1`] = `
Array [
  <div
    className="row mt-4 mb-3 no-gutters"
  >
    <div
      className="col-12 col-xl-3 mb-3 mb-xl-0"
    >
      <h2>
        Overview
      </h2>
    </div>
    <div
      className="col-12 col-xl-4 mb-3 mb-xl-0"
    >
      <div
        className="pgn__searchfield d-flex"
      >
        <form
          className="d-flex align-items-center w-100"
          onReset={[Function]}
          onSubmit={[Function]}
          role="search"
        >
          <label
            className="m-0"
            htmlFor="pgn-searchfield-input-2"
          >
            <span
              className="sr-only"
            >
              search
            </span>
          </label>
          <input
            className="form-control"
            data-hj-suppress={true}
            disabled={false}
            id="pgn-searchfield-input-2"
            name="searchfield-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search by email or code..."
            role="searchbox"
            type="text"
            value=""
          />
          <button
            className="btn"
            disabled={false}
            type="submit"
          >
            <span
              className="pgn__icon"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              className="sr-only"
            >
              submit search
            </span>
          </button>
        </form>
      </div>
    </div>
    <div
      className="col-12 col-xl-5 mb-3 mb-xl-0 text-xl-right"
    >
      <button
        className="mr-2 btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <span
          className="pgn__icon mr-2"
          data-testid="refresh-data"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 8l-4 4h3c0 3.31-2.69 6-6 6a5.87 5.87 0 01-2.8-.7l-1.46 1.46A7.93 7.93 0 0012 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46A7.93 7.93 0 0012 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"
              fill="currentColor"
            />
          </svg>
        </span>
        Refresh data
      </button>
      <a
        className="request-codes-btn btn btn-primary"
        href="/test-enterprise-slug/admin/coupons/request-codes"
        onClick={[Function]}
      >
        <span
          className="pgn__icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 12.998h-6v6h-2v-6H5v-2h6v-6h2v6h6z"
              fill="currentColor"
            />
          </svg>
        </span>
        Request more codes
      </a>
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="pgn-transition-replace-group position-relative"
        style={
          Object {
            "height": null,
          }
        }
      />
    </div>
  </div>,
  <div
    className="row"
  >
    <div
      className="col"
    >
      <div
        className="coupon mb-3 mb-lg-2 rounded border"
      >
        <div
          aria-controls="coupon-details-0"
          aria-expanded={false}
          className="metadata row no-gutters p-2 d-flex align-items-center rounded"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="col-sm-12 col-lg-3 mb-2 mb-lg-0"
          >
            <small
              className="text-muted"
            >
              Coupon Name
            </small>
            <div>
              test-title-1
            </div>
          </div>
          <div
            className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
          >
            <div
              className="row no-gutters"
            >
              <div
                className="col"
              >
                <small
                  className="text-muted"
                >
                  Valid From
                </small>
                <div>
                  January 3, 2019
                </div>
              </div>
              <div
                className="col"
              >
                <small
                  className="text-muted"
                >
                  Valid To
                </small>
                <div>
                  September 18, 2019
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
          >
            <div
              className="row no-gutters"
            >
              <div
                className="col"
              >
                <small
                  className="text-muted"
                >
                  Assignments Remaining
                </small>
                <div>
                  2
                </div>
              </div>
              <div
                className="col"
              >
                <small
                  className="text-muted"
                >
                  Enrollments Redeemed
                </small>
                <div>
                  2 of 10
                  <span
                    className="ml-1"
                  >
                    (20%)
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
          >
            <span
              className="pgn__icon align-right text-primary"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="sr-only"
              >
                Open coupon details
              </span>
            </span>
          </div>
        </div>
        <div
          className="coupon-details row no-gutters px-2 my-3 d-none"
          id="coupon-details-0"
        >
          <div
            className="col"
          />
        </div>
      </div>
      <div
        className="coupon mb-3 mb-lg-2 rounded border"
      >
        <div
          aria-controls="coupon-details-1"
          aria-expanded={false}
          className="metadata row no-gutters p-2 d-flex align-items-center rounded"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          <div
            className="col-sm-12 col-lg-3 mb-2 mb-lg-0"
          >
            <small
              className="text-muted"
            >
              Coupon Name
            </small>
            <div>
              test-title-2
            </div>
          </div>
          <div
            className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
          >
            <div
              className="row no-gutters"
            >
              <div
                className="col"
              >
                <small
                  className="text-muted"
                >
                  Valid From
                </small>
                <div>
                  January 3, 2019
                </div>
              </div>
              <div
                className="col"
              >
                <small
                  className="text-muted"
                >
                  Valid To
                </small>
                <div>
                  September 18, 2019
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
          >
            <div
              className="row no-gutters"
            >
              <div
                className="col"
              >
                <small
                  className="text-muted"
                >
                  Assignments Remaining
                </small>
                <div>
                  2
                </div>
              </div>
              <div
                className="col"
              >
                <small
                  className="text-muted"
                >
                  Enrollments Redeemed
                </small>
                <div>
                  2 of 10
                  <span
                    className="ml-1"
                  >
                    (20%)
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
          >
            <span
              className="pgn__icon align-right text-primary"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41z"
                  fill="currentColor"
                />
              </svg>
              <span
                className="sr-only"
              >
                Open coupon details
              </span>
            </span>
          </div>
        </div>
        <div
          className="coupon-details row no-gutters px-2 my-3 d-none"
          id="coupon-details-1"
        >
          <div
            className="col"
          />
        </div>
      </div>
      <div
        className="d-flex mt-4 justify-content-center"
      >
        <nav
          aria-label="coupons pagination"
          className="pagination-default"
        >
          <div
            aria-atomic={true}
            aria-live="polite"
            aria-relevant="text"
            className="sr-only"
          >
            Page 1, Current Page, of 1
          </div>
          <ul
            className="pagination"
          >
            <li
              className="page-item disabled"
            >
              <button
                aria-label="Previous"
                className="previous page-link btn btn-primary"
                disabled={true}
                onClick={[Function]}
                tabIndex="-1"
                type="button"
              >
                <div>
                  <span
                    className="pgn__icon"
                  >
                    <svg
                      aria-hidden={true}
                      fill="none"
                      focusable={false}
                      height={24}
                      role="img"
                      viewBox="0 0 24 24"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12l4.58-4.59z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  Previous
                </div>
              </button>
            </li>
            <li
              className="page-item disabled"
            >
              <button
                aria-label="Next"
                className="next page-link btn btn-primary"
                disabled={true}
                onClick={[Function]}
                tabIndex="-1"
                type="button"
              >
                <div>
                  Next
                  <span
                    className="pgn__icon"
                  >
                    <svg
                      aria-hidden={true}
                      fill="none"
                      focusable={false}
                      height={24}
                      role="img"
                      viewBox="0 0 24 24"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6-6-6z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </div>
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>,
]
`;
